# nerd

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/commands/: chat.rs  create.rs  mod.rs  modal.rs  register.rs  todo.rs
